force-app/main/default/objects/Contact/fields/LLC_BI__Former_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Former_Employer_Name__c</fullName>
    <description>This field is optional and manually updated. The name under which the previous employer identification number for the account holder was issued.</description>
    <inlineHelpText>The name under which the previous employer identification number for the account holder was issued.</inlineHelpText>
    <label>Former Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>