force-app/main/default/objects/Contact/fields/LLC_BI__Gender__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Gender__c</fullName>
    <description>This field is optional and manually updated. Specifies the gender type of the account holder.</description>
    <inlineHelpText>Specifies the gender type of the account holder.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>