force-app/main/default/objects/Contact/fields/LLC_BI__Home_Address__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Home_Address__c</fullName>
    <description>This field is optional and manually updated. This field is used to specify the Street address of the Contact&apos;s home address</description>
    <label>Home Street</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>