force-app/main/default/objects/Contact/fields/LLC_BI__Home_Address_County__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Home_Address_County__c</fullName>
    <description>Users populate this optional text field with the county name for the home address.</description>
    <label>Home Address County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>