force-app/main/default/objects/Contact/fields/LLC_BI__Home_City__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Home_City__c</fullName>
    <description>The user populates this optional field to specify the city of the contact’s home address. By default, this field is blank.</description>
    <label>Home City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>