force-app/main/default/objects/Contact/fields/LLC_BI__Home_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Home_Zipcode__c</fullName>
    <description>The user populates this optional field to specify the ZIP code of the contact’s home address. By default, this field is blank.</description>
    <label>Home ZIP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>