force-app/main/default/objects/Contact/fields/LLC_BI__Id_Scan_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Id_Scan_Status__c</fullName>
    <description>The system automatically populates this picklist to track the progress through the ID Scan workflow by using the current ID Scan status.</description>
    <label>ID Scan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ID Scan Success</fullName>
            </value>
            <value>
                <fullName>ID Scan Failure</fullName>
            </value>
            <value>
                <fullName>Bad Image</fullName>
            </value>
            <value>
                <fullName>Communication Error</fullName>
            </value>
            <value>
                <fullName>Vendor Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>