force-app/main/default/objects/Contact/fields/LLC_BI__ID_Scan_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ID_Scan_Verification_Date__c</fullName>
    <description>The system automatically populates this date/time field to store the recent date/time the contact initiated in the ID scan workflow.</description>
    <inlineHelpText>The date/time of verification for ID Scan automatically populates in this field.</inlineHelpText>
    <label>ID Scan Verification Date</label>
    <type>DateTime</type>
</CustomField>