force-app/main/default/objects/Contact/fields/LLC_BI__Identity_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Identity_Verification_Date__c</fullName>
    <description>This field automatically populates. It indicates the most recent date and time the contact initiated identity verification.</description>
    <label>Identity Verification Date</label>
    <type>DateTime</type>
</CustomField>