force-app/main/default/objects/Contact/fields/LLC_BI__Identity_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Identity_Verification_Status__c</fullName>
    <description>This picklist field automatically populates. It indicates the identity verification status of the contact.</description>
    <label>Identity Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Communication Error</fullName>
            </value>
            <value>
                <fullName>ID Verification Failure</fullName>
            </value>
            <value>
                <fullName>Not Eligible for Questions</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Retry Limited Exceeded</fullName>
            </value>
            <value>
                <fullName>Unable to Generate Questions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>