force-app/main/default/objects/Contact/fields/LLC_BI__Is_Associated_To_Individual_Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Associated_To_Individual_Account__c</fullName>
    <description>The system automatically populates this formula field to determine if the associated Account is an Individual Account.</description>
    <formula>IF(Account.LLC_BI__Is_Individual__c == 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Associated To Individual Account</label>
    <type>Checkbox</type>
</CustomField>