force-app/main/default/objects/Contact/fields/LLC_BI__Is_Non_Customer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Non_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users populate this optional boolean field on the contact when the entity is not a customer. By default, this field is false.</description>
    <inlineHelpText>Select this checkbox when the added entity is not a customer.</inlineHelpText>
    <label>Is Non-Customer</label>
    <type>Checkbox</type>
</CustomField>