force-app/main/default/objects/Contact/fields/LLC_BI__Languages__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Languages__c</fullName>
    <description>This field is optional and manually updated. This field is used to specify the Language(s) of the contact&apos;s preference</description>
    <label>Languages</label>
    <length>100</length>
    <type>Text</type>
</CustomField>