force-app/main/default/objects/Contact/fields/LLC_BI__Level__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Level__c</fullName>
    <description>This field is not required and is manually populated. This field defines the priority level of a contact to its associated relationship.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>