force-app/main/default/objects/Contact/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>This field is optional. This field is used to specify the external ID / LookupKey for the contact record. ( A unique identifier )</description>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>