force-app/main/default/objects/Contact/fields/LLC_BI__Mailing_Address_County__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Mailing_Address_County__c</fullName>
    <description>Users populate this optional text field with the county name for the mailing address.</description>
    <label>Mailing Address County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>