force-app/main/default/objects/Contact/fields/LLC_BI__Number_of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_of_Dependents__c</fullName>
    <description>The user populates this number field to indicate the number of dependents in the borrower’s household. By default, this field is blank.</description>
    <inlineHelpText>Enter the number of dependents in your household.</inlineHelpText>
    <label>Number of Dependents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>