force-app/main/default/objects/Contact/fields/LLC_BI__OFAC_Check_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__OFAC_Check_Completion_Date__c</fullName>
    <description>The date in which the latest OFAC check was run for a given individual. This field is optional and can be edited via the customer creation workflow.</description>
    <label>OFAC Check Completion Date</label>
    <type>Date</type>
</CustomField>