force-app/main/default/objects/Contact/fields/LLC_BI__OtherPhone_Extension__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__OtherPhone_Extension__c</fullName>
    <description>The user populates this optional text field with the customer&apos;s other phone extension. By default, it is blank.</description>
    <inlineHelpText>Enter the phone extension for the customer&apos;s other phone.</inlineHelpText>
    <label>Other Phone Extension</label>
    <length>6</length>
    <type>Text</type>
</CustomField>