force-app/main/default/objects/Contact/fields/LLC_BI__Permanent_Resident__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Permanent_Resident__c</fullName>
    <description>This field is optional and manually updated. This is used to describe if the contact is a US Citizen</description>
    <label>Are you a permanent US Resident?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>