force-app/main/default/objects/Contact/fields/LLC_BI__Permanent_Resident_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Permanent_Resident_Entry_Date__c</fullName>
    <description>This field is optional. The user manually populates this field. It is the date of entry to the United States for a permanent resident.</description>
    <label>Permanent Residency Date of Entry</label>
    <type>Date</type>
</CustomField>