force-app/main/default/objects/Contact/fields/LLC_BI__Permanent_Resident_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Permanent_Resident_Issue_Date__c</fullName>
    <description>This field is optional. The user manually populates this field. It is the issue date of permanent residency.</description>
    <label>Permanent Residency Issue Date</label>
    <type>Date</type>
</CustomField>