force-app/main/default/objects/Contact/fields/LLC_BI__Permanent_Resident_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Permanent_Resident_Number__c</fullName>
    <description>This field is optional and manually updated. If the contact is a permanent resident this holds the resident number. A 13 digit alpha numeric text.</description>
    <label>Permanent Resident Number</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>