force-app/main/default/objects/Contact/fields/LLC_BI__Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Preferred_Contact_Method__c</fullName>
    <description>This field is optional. The user manually populates this field. It represents the customer&apos;s preferred contact method.</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>