force-app/main/default/objects/Contact/fields/LLC_BI__Primary_ID_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Primary_ID_Expiration_Date__c</fullName>
    <description>This field is optional and manually updated. This field is used to specify the date the Primary ID ( ie Driver&apos;s License) will expire</description>
    <label>Primary ID Expiration Date</label>
    <type>Date</type>
</CustomField>