force-app/main/default/objects/Contact/fields/LLC_BI__Primary_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Primary_Telephone_Number__c</fullName>
    <description>The user manually populates this field to indicate the applicant&apos;s primary telephone number.</description>
    <inlineHelpText>Select the applicant&apos;s primary telephone number.</inlineHelpText>
    <label>Primary Telephone Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MobilePhone</fullName>
                <label>Mobile Phone</label>
            </value>
            <value>
                <fullName>HomePhone</fullName>
                <label>Home Phone</label>
            </value>
            <value>
                <fullName>AssistantPhone</fullName>
                <label>Assistant Phone</label>
            </value>
            <value>
                <fullName>OtherPhone</fullName>
                <label>Other Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>