force-app/main/default/objects/Contact/fields/LLC_BI__Reg_O__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reg_O__c</fullName>
    <description>This field is optional. The user manually populates this field. When enabled, it indicates that an individual is an executive officer, director, or principal shareholder of that financial institution. When disabled, the invidual is not one of these. This field can be used in sharing settings for the org.</description>
    <label>Reg O</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>