force-app/main/default/objects/Contact/fields/LLC_BI__Social_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Social_Insurance_Number__c</fullName>
    <description>The user populates this required text field to capture the borrower’s Social Insurance Number.</description>
    <inlineHelpText>Enter the borrower’s Social Insurance Number here.</inlineHelpText>
    <label>Social Insurance Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>