force-app/main/default/objects/Contact/fields/LLC_BI__SS__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SS__c</fullName>
    <description>This field is optional and manually updated. This field is used to specify the social security number of the contact associated to the relationship/account. The field should not be used if Platform Encryption is enabled.</description>
    <label>SS#</label>
    <length>80</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>