force-app/main/default/objects/Contact/fields/LLC_BI__SS_PE__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SS_PE__c</fullName>
    <description>This field is optional and manually updated. This field is used to specify the social security number of the contact associated to the relationship/account. The field is only used when Platform Encryption is enabled.</description>
    <label>SS#</label>
    <length>12</length>
    <type>Text</type>
</CustomField>