force-app/main/default/objects/Contact/fields/LLC_BI__Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Survey_Status__c</fullName>
    <description>This field is optional and manually updated. This field is currently not being used.</description>
    <inlineHelpText>110: Closing Survey Queued
801: Closing Survey Sent</inlineHelpText>
    <label>Survey Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>