force-app/main/default/objects/Contact/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This field is optional and manually updated. This field is used to specify the type of contact for this record. Typical pick list entries might include borrower, professional, referral source, or prospect. The value provided must match one of the values in the type pick list established for this organization.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Professional Contact</fullName>
            </value>
            <value>
                <fullName>Referral Source</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>