force-app/main/default/objects/Contact/fields/LLC_BI__W7_Exception_1a_Partner_EIN_Ind__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__W7_Exception_1a_Partner_EIN_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</description>
    <inlineHelpText>The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</inlineHelpText>
    <label>W7 Exception 1a Partnership EIN Ind</label>
    <type>Checkbox</type>
</CustomField>