force-app/main/default/objects/Contact/fields/LLC_BI__W7_Foreign_Military_ID_Card_Verifies__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__W7_Foreign_Military_ID_Card_Verifies__c</fullName>
    <description>This field is optional and manually updated. Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</description>
    <inlineHelpText>Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
    <label>W7 Foreign Military ID Card Verifies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Foreign Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>