force-app/main/default/objects/Contact/fields/SupplementalIncome__c.field-meta.xml
<CustomField>
    <fullName>SupplementalIncome__c</fullName>
    <label>Supplemental Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>