force-app/main/default/objects/Contact/fields/TotalIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalIncome__c</fullName>
    <formula>AnnualIncome__c + SupplementalIncome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Income + Supplemental Income</inlineHelpText>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>