force-app/main/default/objects/Contact/fields/WKDDP__Birth_City__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Birth_City__c</fullName>
    <description>Users select the birth state and enter the birth city of the account holder.</description>
    <inlineHelpText>Users select the birth state and enter the birth city of the account holder.</inlineHelpText>
    <label>Birth City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>